FISH-8652: Downgrade NoIndexLossAfterSplitBrainHealTest.
List construction, records into classes, and multiline strings.